# tls_connection_coding_challenge

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yaml
.github/workflows/: ci.yaml  ci.yml  codeql.yaml  gh-pages.yaml  pages.yaml
cpp/: CMakeLists.txt  pow_core.cpp  pow_core.h  pow_core_internal.h  work_challenge.cpp  work_core.cpp  work_core.h  work_core_internal.h
cpp/tests/: pow_core_test.cpp  work_core_test.cpp
docker/: client.Dockerfile  server.Dockerfile
docs/: Doxyfile  Makefile  conf.py  cpp_api.rst  demo.cast  getting_started.rst  guide.md  index.rst  intro.md  python_api.rst  requirements.txt
scripts/: code-tools.sh  compare-tutorial-logs.sh  compare_tutorial_logs.sh  install-cpp-deps.sh  install-python-deps.sh  make-certs.sh
src/: client.py  pow_benchmark.cpp  pow_core.cpp  pow_core.h  protocol.py  server.py
src/tests/: conftest.py  helpers.py  pow_core_test.cpp  test_client.py  test_protocol.py  test_server.py  test_tls.py
src/tlscc/: __init__.py  client.py  logging_utils.py  protocol.py  server.py
src/tlslp/: client.py  logging_utils.py  protocol.py  server.py
tests/: _helpers.py  conftest.py  helpers.py  test_client.py  test_protocol.py  test_server.py  test_tls.py
