[project]
name = "tls-connection-coding-challenge"
version = "0.1.0"
dependencies = ["cryptography", "trustme"]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0" }
authors = [{ name = "Elliott Bache" }]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-timeout",
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinxcontrib.mermaid",
  "sphinx_rtd_theme",
  "pre-commit",
  "ruff",
  "black",
  "isort",
  "mypy",
  "codespell",
  "myst-parser>=3.0",
  "breathe",
  "pytest-cov",
]

[project.scripts]
tlscc-client = "tlscc.client:main"
tlscc-server = "tlscc.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
tlscc = ["_bin/pow_challenge"]

# pyproject.toml
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","S","PERF","RUF"]
ignore = ["E203", "E501"]  # let the formatter handle wrapping
fixable = ["E","UP","SIM","PERF","RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"src/tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"  # personal taste

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = "^(migrations|build|dist|.venv|_deps)/"

[tool.isort]
skip = [".venv", "migrations", "build", "dist"]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src"]
explicit_package_bases = true
namespace_packages = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.codespell]
skip = "./docs/_build/*,build,dist,.venv,build-asan,build-tsan,./docs/html/*,old_files,_deps,htmlcov,WD,./src/include,./docs/demo*,./certificates"
ignore-words-list = "teh,nd"  # add project-specific false positives

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = [
  "-q",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--cov-report=html:htmlcov",
  "--cov-fail-under=85"
]